Task 1 fully complete

--- a/src/task_1/part_1.ipynb
+++ b/src/task_1/part_1.ipynb
@@ -1,22 +1,27 @@
 {
  "cells": [
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-11T09:35:36.884695Z",
+     "start_time": "2025-09-11T09:35:36.879578Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Assignment 0\n",
     "# Task 1"
    ],
-   "id": "cc245fd31bb29bfc"
+   "id": "cc245fd31bb29bfc",
+   "outputs": [],
+   "execution_count": 226
   },
   {
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-09T22:37:16.811865Z",
-     "start_time": "2025-09-09T22:37:16.807751Z"
+     "end_time": "2025-09-11T09:39:45.058450Z",
+     "start_time": "2025-09-11T09:39:45.052868Z"
     }
    },
    "cell_type": "code",
@@ -26,18 +31,17 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from matplotlib.pyplot import imshow\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.decomposition import PCA"
+    "import matplotlib.pyplot as plt"
    ],
    "id": "b411bf68f4373fc5",
    "outputs": [],
-   "execution_count": 138
+   "execution_count": 238
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-09T20:21:08.953552Z",
-     "start_time": "2025-09-09T20:21:08.789924Z"
+     "end_time": "2025-09-11T09:39:11.993383Z",
+     "start_time": "2025-09-11T09:39:11.870270Z"
     }
    },
    "cell_type": "code",
@@ -51,13 +55,13 @@
    ],
    "id": "9ff281e76316c2b0",
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 237
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-09T23:30:10.828506Z",
-     "start_time": "2025-09-09T23:30:10.749820Z"
+     "end_time": "2025-09-11T09:36:42.646833Z",
+     "start_time": "2025-09-11T09:36:42.628671Z"
     }
    },
    "cell_type": "code",
@@ -78,13 +82,13 @@
    ],
    "id": "b744e47e820a5ba6",
    "outputs": [],
-   "execution_count": 213
+   "execution_count": 232
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-09T23:30:12.003362Z",
-     "start_time": "2025-09-09T23:30:11.635078Z"
+     "end_time": "2025-09-11T09:36:43.899281Z",
+     "start_time": "2025-09-11T09:36:43.609068Z"
     }
    },
    "cell_type": "code",
@@ -116,13 +120,13 @@
      }
     }
    ],
-   "execution_count": 214
+   "execution_count": 233
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-09T23:30:13.767183Z",
-     "start_time": "2025-09-09T23:30:13.702477Z"
+     "end_time": "2025-09-11T09:36:45.149808Z",
+     "start_time": "2025-09-11T09:36:45.069987Z"
     }
    },
    "cell_type": "code",
@@ -333,18 +337,18 @@
        "</div>"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 215
+   "execution_count": 234
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-09T23:30:15.206914Z",
-     "start_time": "2025-09-09T23:30:15.186124Z"
+     "end_time": "2025-09-11T09:36:46.059265Z",
+     "start_time": "2025-09-11T09:36:46.031414Z"
     }
    },
    "cell_type": "code",
@@ -385,15 +389,20 @@
      ]
     }
    ],
-   "execution_count": 216
+   "execution_count": 235
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-11T09:36:46.846052Z",
+     "start_time": "2025-09-11T09:36:46.831646Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "# The numbers that would seem the most difficult to seperate for a machine learning algorithm, would likely be the ones that are the most similar. From the table above we see that the smallest difference in euclidian distance is between numbrers 7 and 9. Therefore, we should expect these digits to be hardest to seperate on average.",
-   "id": "79004029d81b6f01"
+   "id": "79004029d81b6f01",
+   "outputs": [],
+   "execution_count": 236
   }
  ],
  "metadata": {
