Fixed data directories for new src folder

--- a/src/task_1/part_1.ipynb
+++ b/src/task_1/part_1.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-11T09:35:36.884695Z",
-     "start_time": "2025-09-11T09:35:36.879578Z"
+     "end_time": "2025-09-12T14:58:09.818841Z",
+     "start_time": "2025-09-12T14:58:09.809046Z"
     }
    },
    "cell_type": "code",
@@ -14,14 +14,14 @@
    ],
    "id": "cc245fd31bb29bfc",
    "outputs": [],
-   "execution_count": 226
+   "execution_count": 3
   },
   {
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-11T09:39:45.058450Z",
-     "start_time": "2025-09-11T09:39:45.052868Z"
+     "end_time": "2025-09-12T14:58:18.182167Z",
+     "start_time": "2025-09-12T14:58:10.046980Z"
     }
    },
    "cell_type": "code",
@@ -35,33 +35,33 @@
    ],
    "id": "b411bf68f4373fc5",
    "outputs": [],
-   "execution_count": 238
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-11T09:39:11.993383Z",
-     "start_time": "2025-09-11T09:39:11.870270Z"
+     "end_time": "2025-09-12T14:58:33.227566Z",
+     "start_time": "2025-09-12T14:58:33.039652Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Load in data\n",
     "\n",
-    "train_in = pd.read_csv(\"../data/train_in.csv\", header=None)\n",
-    "test_in = pd.read_csv(\"../data/test_in.csv\", header=None)\n",
-    "train_out = pd.read_csv(\"../data/train_out.csv\", header=None)\n",
-    "test_out = pd.read_csv(\"../data/test_out.csv\", header=None)"
+    "train_in = pd.read_csv(\"../../data/train_in.csv\", header=None)\n",
+    "test_in = pd.read_csv(\"../../data/test_in.csv\", header=None)\n",
+    "train_out = pd.read_csv(\"../../data/train_out.csv\", header=None)\n",
+    "test_out = pd.read_csv(\"../../data/test_out.csv\", header=None)"
    ],
    "id": "9ff281e76316c2b0",
    "outputs": [],
-   "execution_count": 237
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-11T09:36:42.646833Z",
-     "start_time": "2025-09-11T09:36:42.628671Z"
+     "end_time": "2025-09-12T14:58:33.966850Z",
+     "start_time": "2025-09-12T14:58:33.943752Z"
     }
    },
    "cell_type": "code",
@@ -82,13 +82,13 @@
    ],
    "id": "b744e47e820a5ba6",
    "outputs": [],
-   "execution_count": 232
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-11T09:36:43.899281Z",
-     "start_time": "2025-09-11T09:36:43.609068Z"
+     "end_time": "2025-09-12T14:58:35.003738Z",
+     "start_time": "2025-09-12T14:58:34.650745Z"
     }
    },
    "cell_type": "code",
@@ -120,13 +120,13 @@
      }
     }
    ],
-   "execution_count": 233
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-11T09:36:45.149808Z",
-     "start_time": "2025-09-11T09:36:45.069987Z"
+     "end_time": "2025-09-12T14:58:40.197344Z",
+     "start_time": "2025-09-12T14:58:40.156540Z"
     }
    },
    "cell_type": "code",
@@ -337,18 +337,18 @@
        "</div>"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 234
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-11T09:36:46.059265Z",
-     "start_time": "2025-09-11T09:36:46.031414Z"
+     "end_time": "2025-09-12T14:58:40.957093Z",
+     "start_time": "2025-09-12T14:58:40.946007Z"
     }
    },
    "cell_type": "code",
@@ -389,7 +389,7 @@
      ]
     }
    ],
-   "execution_count": 235
+   "execution_count": 12
   },
   {
    "metadata": {
