fit works, predict doesn't, because I made it a little confusing with the transposes, but I couldn't get it to work otherwise

--- a/src/task_2/multi_class_perceptron.ipynb
+++ b/src/task_2/multi_class_perceptron.ipynb
@@ -17,8 +17,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T11:52:22.390041Z",
-     "start_time": "2025-09-16T11:52:22.379351Z"
+     "end_time": "2025-09-25T18:31:28.126259Z",
+     "start_time": "2025-09-25T18:31:26.723906Z"
     }
    },
    "cell_type": "code",
@@ -32,131 +32,159 @@
    ],
    "id": "7b5fcd572fa7ce4a",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T11:52:23.451224Z",
-     "start_time": "2025-09-16T11:52:23.259052Z"
+     "end_time": "2025-09-25T18:31:28.295052Z",
+     "start_time": "2025-09-25T18:31:28.138043Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Load in data\n",
     "\n",
-    "train_in = pd.read_csv(\"../../data/train_in.csv\", header=None)\n",
+    "train_in = pd.read_csv(\"../../data/train_in.csv\", header=None).T\n",
     "test_in = pd.read_csv(\"../../data/test_in.csv\", header=None)\n",
-    "train_out = pd.read_csv(\"../../data/train_out.csv\", header=None)\n",
+    "train_out = pd.read_csv(\"../../data/train_out.csv\", header=None).T\n",
     "test_out = pd.read_csv(\"../../data/test_out.csv\", header=None)"
    ],
    "id": "c619cb2f056f4f5d",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T11:52:25.843618Z",
-     "start_time": "2025-09-16T11:52:25.839563Z"
+     "end_time": "2025-09-25T18:30:34.325052Z",
+     "start_time": "2025-09-25T18:30:34.310779Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Activation function\n",
     "\n",
-    "def unit_step_func(x):\n",
-    "    return np.where(x > 0, 1, 0)"
+    "combined = {}\n",
+    "\n",
+    "def ReLu(x):\n",
+    "    return np.where(x > 0, x, 0)\n",
+    "\n",
+    "def softmax(a):\n",
+    "    return np.exp(a) / np.sum(np.exp(a))\n",
+    "\n",
+    "train_in.shape\n",
+    "# To create a matrix where each digit contains all the digit's matrices\n",
+    "# for matrix, digit in zip(train_in.values, train_out.values.ravel()):\n",
+    "#     combined.setdefault(digit, []).append(matrix)"
    ],
    "id": "b32c77ea954cd4d9",
-   "outputs": [],
-   "execution_count": 8
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(256, 1707)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:03:55.479946Z",
-     "start_time": "2025-09-16T12:03:55.463623Z"
+     "end_time": "2025-09-25T18:31:28.356614Z",
+     "start_time": "2025-09-25T18:31:28.344458Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# Perceptron class\n",
-    "# Mostly copied from tutorial, we need to make this our own\n",
-    "\n",
     "class Perceptron():\n",
-    "    def __init__(self, lr=0.05,  iterations=10):\n",
+    "    def __init__(self, lr=0.05, iterations=10):\n",
     "        self.lr = lr\n",
     "        self.iterations = iterations\n",
-    "        self.activation_func = unit_step_func\n",
+    "        # self.activation_func = ReLu\n",
+    "        self.activation = None\n",
     "        self.weights = None\n",
     "        self.bias = None\n",
     "\n",
     "    def fit(self, X, y):\n",
+    "        n_features, n_samples = X.shape\n",
+    "        print(f\"Interpreted as: {n_samples} samples, {n_features} features\")\n",
+    "        n_classes = len(np.unique(y))\n",
+    "        Y = np.zeros((n_samples, n_classes))\n",
+    "        Y[np.arange(n_samples), y] = 1\n",
     "\n",
+    "        print(X.shape)\n",
+    "        if self.weights is None:\n",
+    "            self.weights = np.random.randn(n_features, n_classes) * 0.01\n",
+    "            self.bias = np.zeros(n_classes) * 0.01\n",
     "\n",
-    "        # n_samples, n_features = X.shape\n",
-    "        # self.weights = np.random.randn(n_features, 1)\n",
-    "        # self.bias = np.random.rand()\n",
-    "        #\n",
-    "        # y_ = unit_step_func(X)\n",
-    "        #\n",
-    "        # for _ in range(0, self.iterations):\n",
-    "        #     for idx, x_i in enumerate(X):\n",
-    "        #         linear_output = np.dot(x_i, self.weights) + self.bias\n",
-    "        #         y_pred = self.activation_func(linear_output)\n",
-    "        #\n",
-    "        #         update = self.lr * (y_pred - y_[idx])\n",
-    "        #         self.weights = update * x_i\n",
-    "        #         self.bias += update\n",
+    "        for epoch in range(0, self.iterations):\n",
+    "            epoch_loss = 0.0\n",
+    "            # CHANGE 1: Replace enumerate(X) with range(n_samples)\n",
+    "            for idx in range(n_samples):\n",
+    "                y_true = Y[idx]\n",
+    "                x_i = X[:, idx]\n",
+    "                scores = np.dot(x_i, self.weights) + self.bias\n",
+    "                error = scores - y_true\n",
+    "                epoch_loss += 0.5 * np.sum(error**2)\n",
     "\n",
+    "                weight_update = np.outer(x_i, error)\n",
+    "                self.weights -= self.lr * weight_update\n",
+    "                self.bias -= self.lr * error\n",
+    "\n",
+    "            if epoch % 10 == 0 or epoch == self.iterations-1:\n",
+    "                preds = self.predict(X)\n",
+    "                acc = np.mean(preds == y)\n",
+    "                print(f\"Epoch {epoch+1}/{self.iterations} loss={epoch_loss:.4f} acc={acc:.4f}\")\n",
     "\n",
     "    def predict(self, X):\n",
-    "        linear_output = np.dot(X, self.weights) + self.bias\n",
-    "        y_pred = self.activation_func(linear_output)\n",
-    "\n",
-    "        return y_pred"
+    "        layer_1 = np.dot(X.T, self.weights) + self.bias\n",
+    "        return np.argmax(layer_1, axis=1)"
    ],
-   "id": "7de378bfcbc31fc6",
+   "id": "c7b4c349e0c4672f",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:06:15.318279Z",
-     "start_time": "2025-09-16T12:03:56.745969Z"
+     "end_time": "2025-09-25T18:32:06.124837Z",
+     "start_time": "2025-09-25T18:31:57.809469Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "#Test code\n",
-    "\n"
+    "mlp = Perceptron(lr=0.0005, iterations=100)\n",
+    "mlp.fit(train_in.values, train_out)\n"
    ],
-   "id": "1cfd084d5985cdce",
+   "id": "fbd22f2dd524bb74",
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (1000,256) (256,256) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mValueError\u001B[39m                                Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[14]\u001B[39m\u001B[32m, line 5\u001B[39m\n\u001B[32m      3\u001B[39m pcpt = Perceptron()\n\u001B[32m      4\u001B[39m pcpt.fit(train_in, train_out)\n\u001B[32m----> \u001B[39m\u001B[32m5\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[43mpcpt\u001B[49m\u001B[43m.\u001B[49m\u001B[43mpredict\u001B[49m\u001B[43m(\u001B[49m\u001B[43mtest_in\u001B[49m\u001B[43m)\u001B[49m)\n",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[13]\u001B[39m\u001B[32m, line 30\u001B[39m, in \u001B[36mPerceptron.predict\u001B[39m\u001B[34m(self, X)\u001B[39m\n\u001B[32m     29\u001B[39m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34mpredict\u001B[39m(\u001B[38;5;28mself\u001B[39m, X):\n\u001B[32m---> \u001B[39m\u001B[32m30\u001B[39m     linear_output = \u001B[43mnp\u001B[49m\u001B[43m.\u001B[49m\u001B[43mdot\u001B[49m\u001B[43m(\u001B[49m\u001B[43mX\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43mweights\u001B[49m\u001B[43m)\u001B[49m\u001B[43m \u001B[49m\u001B[43m+\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43mbias\u001B[49m\n\u001B[32m     31\u001B[39m     y_pred = \u001B[38;5;28mself\u001B[39m.activation_func(linear_output)\n\u001B[32m     33\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m y_pred\n",
-      "\u001B[31mValueError\u001B[39m: operands could not be broadcast together with shapes (1000,256) (256,256) "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Interpreted as: 1707 samples, 256 features\n",
+      "(256, 1707)\n",
+      "Epoch 1/100 loss=372.5967 acc=0.8992\n",
+      "Epoch 11/100 loss=232.0332 acc=0.9315\n",
+      "Epoch 21/100 loss=222.6196 acc=0.9391\n",
+      "Epoch 31/100 loss=218.0155 acc=0.9426\n",
+      "Epoch 41/100 loss=215.2326 acc=0.9455\n",
+      "Epoch 51/100 loss=213.3646 acc=0.9467\n",
+      "Epoch 61/100 loss=212.0248 acc=0.9467\n",
+      "Epoch 71/100 loss=211.0182 acc=0.9479\n",
+      "Epoch 81/100 loss=210.2354 acc=0.9479\n",
+      "Epoch 91/100 loss=209.6103 acc=0.9490\n",
+      "Epoch 100/100 loss=209.1471 acc=0.9496\n"
      ]
     }
    ],
-   "execution_count": 14
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "c7b4c349e0c4672f"
+   "execution_count": 5
   }
  ],
  "metadata": {
